--- a/TelecomX_alura_n2.ipynb
+++ b/TelecomX_alura_n2.ipynb
@@ -2317,7 +2317,7 @@
         "  - **Cargos mensuales altos** también se relacionan con mayor churn.\n",
         "- El uso de `class_weight='balanced'` compensó el desbalance de clases.\n",
         "\n",
-        "### Conclusión ejecutiva (para el negocio)\n",
+        "### Conclusión ejecutiva \n",
         "- **1 de cada 4 clientes se da de baja** → es un riesgo alto.\n",
         "- **Contratos mensuales = foco rojo** → ofrecer descuentos o beneficios para que pasen a contratos anuales o bianuales.\n",
         "- **Cheques electrónicos = clientes inestables** → incentivar pagos automáticos o bancarios.\n",
